--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "now --team quicky-dev -n quicky-dev && now --team quicky-dev alias",
+    "stage": "now --team quicky-dev -n stage-quicky-dev && now --team stage-quicky-dev alias stage-lasagna.now.sh",
+    "now-build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
