--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
@@ -19,12 +19,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "cp now_configs/deploy.json now.json && now --team quicky-dev -n quicky-dev && now --team quicky-dev alias",
-    "stage": "cp now_configs/stage.json now.json && now --team quicky-dev -n stage-quicky-dev && now --team quicky-dev alias stage-quicky-dev.now.sh",
+    "deploy-main-prod": "cp now_configs/deploy.json now.json && now --team quicky-dev -n quicky-dev --prod",
+    "deploy-main-stage": "cp now_configs/deploy.json now.json && now --team quicky-dev -n quicky-dev",
+    "deploy-backup-prod": "cp now_configs/stage.json now.json && now --team quicky-dev -n stage-quicky-dev --prod",
+    "deploy-backup-stage": "cp now_configs/stage.json now.json && now --team quicky-dev -n stage-quicky-dev",
     "now-build": "react-scripts build"
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "engines": {
+    "node": "10.16.0"
   },
   "browserslist": [
     ">0.2%",
@@ -32,5 +37,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:3000"
+  "proxy": "http://localhost:37887"
 }
