--- a/now.json
+++ b/now.json
@@ -1,12 +1,8 @@
 {
     "version": 2,
     "name": "quicky-dev",
-    "alias": "live-quicky-dev.now.sh",
     "routes": [
-        {
-            "src": "/api.*", 
-            "dest":"https://api.quicky.dev"
-        },
+        {"src": "/api.*", "dest":"https://api.quicky.dev" },
         {"src": "/form", "dest":"/"},
         {"src": "/setup", "dest":"/"}
     ],
