--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy-main-prod": "cp now_configs/deploy.json now.json && now --team quicky-dev -n quicky-dev --prod",
-    "deploy-main-stage": "cp now_configs/deploy.json now.json && now --team quicky-dev -n quicky-dev",
-    "deploy-backup-prod": "cp now_configs/stage.json now.json && now --team quicky-dev -n stage-quicky-dev --prod",
-    "deploy-backup-stage": "cp now_configs/stage.json now.json && now --team quicky-dev -n stage-quicky-dev",
+    "deploy-main-prod": "cp now_configs/deploy.json now.json && now --scope quicky-dev -n quicky-dev --prod",
+    "deploy-main-stage": "cp now_configs/deploy.json now.json && now --scope quicky-dev -n quicky-dev",
+    "deploy-backup-prod": "cp now_configs/stage.json now.json && now --scope quicky-dev -n stage-quicky-dev --prod",
+    "deploy-backup-stage": "cp now_configs/stage.json now.json && now --scope quicky-dev -n stage-quicky-dev",
     "now-build": "react-scripts build"
   },
   "eslintConfig": {
