--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run docs && npm run lint"
     }
   }
 }
