installed clipboard.js

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
+    "react-clipboard.js": "^2.0.16",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.0.0",
